--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/fec2-frodo/AP-FEC-proxy#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "http-proxy": "^1.17.0"
+    "http-proxy": "^1.17.0",
+    "newrelic": "^5.11.0"
   }
 }
