Implement caching of service responses

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "http-proxy": "^1.17.0",
-    "newrelic": "^5.11.0"
+    "newrelic": "^5.11.0",
+    "node-cache": "^4.2.1"
   }
 }
